--- a/src/app/job-discovery.component/job-discovery.component.html
+++ b/src/app/job-discovery.component/job-discovery.component.html
@@ -35,7 +35,7 @@
   <div class="row g-3" *ngIf="filteredSources$ | async as sources">
     <div class="col-md-6 col-lg-4" *ngFor="let source of sources">
       <div class="card h-100 border-0 shadow-sm resource-card transition-all rounded-3 bg-white"
-           (click)="openSource(source.url)"
+           (click)="openSource(source.url, source.name)"
            style="cursor: pointer;">
         <div class="card-body p-3">
           <div class="d-flex align-items-start mb-2">
